# majiang_core

./: .gitignore  Cargo.toml  README.md
clinerules/: 01-coding.md  02-hj.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: action.rs  errors.rs  hand.rs  lib.rs  meld.rs  wall.rs
src/action/: mod.rs  serialization.rs  types.rs  validation.rs
src/game/: context.rs  flow.rs  mod.rs  state.rs  turn.rs  utils.rs
src/hand/: analysis.rs  efficiency.rs  mod.rs  parser.rs  representation.rs
src/meld/: mod.rs  types.rs  utils.rs
src/player/: actions.rs  agent.rs  ai.rs  mod.rs  model.rs  utils.rs
src/rules/: mod.rs
src/rules/common/: mod.rs  win_patterns.rs
src/rules/mcr/: flower.rs  mod.rs  scoring.rs  win_check.rs
src/rules/riichi/: mod.rs  riichi_specific.rs  score.rs  win_check.rs  yaku.rs
src/rules/shanghai/: flower.rs  mod.rs  scoring.rs  win_check.rs
src/tile/: display.rs  mod.rs  serialization.rs  tile.rs  types.rs
src/wall/: builder.rs  dead_wall.rs  mod.rs
tests/: display_test.rs  mod.rs  test_tile.rs
tests/common/: test_tile.rs
tests/meld/: mod.rs  test_meld_creation.rs  test_meld_operations.rs  test_meld_validation.rs
tests/tile/: display_tests.rs  mod.rs  test_create.rs  test_serialization.rs
tests/wall/: mod.rs  test_basic.rs  test_config.rs  test_deadwall.rs
